2003 Nov 8 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>

    * Updated tools to use STConversation object.

2003 Oct 23 Stefan Urbanek <stefanu@altair.dcs.elf.stuba.sk>

    * Added STEnvironment +sharedEnvironment, +defaultScriptingEnvironment and
    initWithDefaultDescription. Deprecated initDefault, 
    environmentWithDescriptionName, environmentWithDescriptionName
    * Added STConversation class
    
2003 Oct 6 Stefan Urbanek <urbanek@host.sk>

    * Added STFileScript - moved all unnecessary stuff from STScript there.
    * Fixed STScriptsManager to use STFileScript

2003 Oct 3   Stefan Urbanek <urbanek@host.sk>

    * Added ReadlineTranscript module (Idea by Alexander Diemand + patch from 
    David Ayers)
    * Added shell.st example.

2003 Sep 24  Stefan Urbanek <urbanek@host.sk>
    
    * STEnvironmentDescription: guard initialisation in Autorelease pool

2003 Sep 23  Stefan Urbanek <urbanek@host.sk>

    * STEngine: setValueForOption: added

2003 Aug 13  Stefan Urbanek <urbanek@host.sk>

    * Version 0.8.0

2003 Aug 9  Stefan Urbanek <urbanek@host.sk>

    * Removed compiler warnings in StepTalk.framework, Smalltalk and Tools

2003 Aug 6  Stefan Urbanek <urbanek@host.sk>

    * Frameworks: new directory
    * Changed StepTalk from library to framework
    * Modules: Removed StepTalk module as it is no more needed, because
    we have framework and it can provide scripting capabilities by it self
    * All GNUMakefiles modified to reflect change to Framework
    * Added Framework loading in .stenv description files. 
    Use: Frameworks = (name1, name2);
    
    NOTE: You HAVE to remove your previous installation of StepTalk to be
    able to install new one. (especially Local/Library/Headers/StepTalk).
    
2003 Aug 5  Stefan Urbanek <urbanek@host.sk>
    
    * Added STScriptObject and STMethod.

2003 Jun 15

    * NSInvocation+additions: added unknown selector creation; created a
    workaround for gnustep DO bug