@@ -1,20 +1,33 @@
 TODO list
 
- 1 handle 'connection did die' notification for distant objects in STEnvironment
- 2 fix class-info lookup for proxies in STEnvironment
- 3 implement NSRect object
- 5 Smalltalk: separate compiler and compilation context
- 9 create a 'Shell' scripting environment
-11 Create ApplicationScripting framework, instead of bundle. It should offer
+HIGH PRIORITY 
+
+- implement NSRect object
+- Rewrite Smalltalk compiler (grammar)
+
+        Remove STBytecodeInterpreter and use only STCompiler. How?
+        Simply convert language constructions into 'command' objects like
+        SmalltalkStatement, SmalltalkPrimary, SmalltalkMethodSend, ...
+        and implement executeInEnvironment:context:receiver:
+        
+- Update application scripting to use STConversation
+
+LOW PRIORITY
+
+UNDEFINED
+
+- handle 'connection did die' notification for distant objects in STEnvironment
+- fix class-info lookup for proxies in STEnvironment
+- Smalltalk: separate compiler and compilation context
+- create a 'Shell' scripting environment
+- Create ApplicationScripting framework, instead of bundle. It should offer
    passive application scripting (without linking) and active app. scripting
    (linking with the framewotk). Give it some reasonable name, becauase that one
    is already used by Apple
-13 Change source directory structure (see DevelopmentNotes.txt in Doumentation)
-14 Add framework list into environment description
-15 Change Modules to Framework
-16 Remove StepTalk modules
-17 Fill implementation of STScriptObject, STMethod and related STEngine methods
-18 Rewrite Smalltalk compiler (grammar)
-19 Remove empty directories (Source, Modules/StepTalk)
-20 Replace STMethod languageName with map table of method class->engine class
-21 Update application scripting to use STConversation
+- Add framework list into environment description
+- Change Modules to Frameworks
+- Fill implementation of STScriptObject, STMethod and related STEngine methods
+- Remove empty directories (Source, Modules/StepTalk)
+- Replace STMethod languageName with map table of method class->engine class
+
+    
