@@ -4,7 +4,7 @@
 # The version number of this release.
 MAJOR_VERSION=0
 MINOR_VERSION=8
-SUBMINOR_VERSION=1
+SUBMINOR_VERSION=2
 
 STEPTALK_VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${SUBMINOR_VERSION}
 
